# textual-game-of-life

./: .envrc  .gitignore  .pre-commit-config.yaml  README.md  game_app.py  pyproject.toml  requirements.txt  style.tcss  test_game_app.py  universe.toml
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/game_app/: cell.py  game_app.py  style.tcss  textual_universe_view.py  universe.py  universe_presenter.py  universe_reader.py  universe_view.py
tests/: test_game_app.py
